Add content to the Lasagna Recipe
Added content to the Lasagna Recipe
An image, description, and ordered & unordered lists

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/Lasagna-Recipe-f.webp" alt="Picture of a Lasagna" height="" width="">
+    <!-- Source: thecozycook.com -->
+
+    <h2>Description</h2>
+    <p>This recipe has simple ingredients but tons of flavor with a creamy ricotta mixture, savory meat sauce, and lots of mozzarella cheese.</p>
+    <p>his is a great freezer meal, make-ahead recipe, and leftovers freeze and reheat super well.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Lasagna</li>
+        <li>Cheese Filling</li>
+        <li>Meat Sauce</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Prep Work</li>
+        <li>Preheat Oven and Cook the Lasagna Noodles</li>
+        <li>Assemble</li>
+        <li>Bake</li>
+    </ol>
 </body>
 </html>
