--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="./recipes/breakfast-tacos.html">Breakfast Tacos Recipe</a></li>
+            <li><a href="./recipes/cheese.html">Cheese Guide</a></li>
+        </ul>
     </body>
 </html>
